--- a/.env
+++ b/.env
@@ -30,6 +30,6 @@ APP_SECRET=9cb9f42664e8c6075da88ae82b3a7908
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL="mysql://root:123456789@127.0.0.1:3306/Projet_Symfony?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/projetsymfony?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
