--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
         "dompdf/dompdf": "^1.0",
+        "friendsofsymfony/ckeditor-bundle": "^2.3",
         "knplabs/knp-paginator-bundle": "^5.4",
         "nzo/file-downloader-bundle": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.2",
