Auto stash before merge of "Marouene" and "origin/main"

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=9cb9f42664e8c6075da88ae82b3a7908
 # ##< symfony/framework-bundle ###
 
 # ##> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://4b8a90bfa09a67:82de6b364fb433@smtp.mailtrap.io:2525
 # ##< symfony/mailer ###
 
 # ##> doctrine/doctrine-bundle ###
