--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@
 # 
 # Real environment variables win over .env files.
 # 
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
+# DO NOT DEFINE PRODUCTION SECRETS IN THIS FIfLE NOR IN ANY OTHER COMMITTED FILES.
 # 
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
@@ -30,3 +30,10 @@ APP_SECRET=9cb9f42664e8c6075da88ae82b3a7908
 DATABASE_URL=mysql://nxOgCCeuLl:iGexwdvsib@remotemysql.com:3306/nxOgCCeuLl?serverVersion=4.8.5
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 # ##< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://marouene46@gmail.com:marwen_2007@localhost
+###< symfony/swiftmailer-bundle ###
