--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,4 +3,8 @@ twig:
   debug: "%kernel.debug%"
   strict_variables: "%kernel.debug%"
   exception_controller: null
-  form_theme: ["bootstrap_4_layout.html.twig"]
+  form_theme:
+    [
+      "bootstrap_4_layout.html.twig",
+      "@FOSCKEditor/Form/ckeditor_widget.html.twig",
+    ]
