--- a/.env
+++ b/.env
@@ -34,6 +34,15 @@ DATABASE_URL=mysql://nxOgCCeuLl:iGexwdvsib@remotemysql.com:3306/nxOgCCeuLl?serve
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://marouene46@gmail.com:marwen_2007@localhost
-###< symfony/swiftmailer-bundle ###
+# Delivery is disabled by default via "null://localhost".
+MAILER_DSN=gmail://marouene46@gmail.com:marwen_2007@default
+###< symfony/google-mailer ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
